--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -823,6 +823,75 @@
     },
     {
       "cell_type": "markdown",
+      "id": "0e820cb6-9569-4f10-8cbc-0842b62f4247",
+      "metadata": {},
+      "source": [
+        "# \u5b89\u88c5openpose-editor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f80eda71-1ff5-4593-9b36-3e2f17488df1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from func.extensionsInstaller import install\n",
+        "\n",
+        "extURL='https://github.com/fkunn1326/openpose-editor'\n",
+        "extFileSize=0\n",
+        "\n",
+        "install(extURL,extFileSize)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d92d9c3c-b4ac-43e9-925e-0044134a5e78",
+      "metadata": {},
+      "source": [
+        "# \u5b89\u88c5clip-interrogator-ext"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d091696f-8f12-4129-9197-ea72afb063c5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from func.extensionsInstaller import install\n",
+        "\n",
+        "extURL='https://github.com/pharmapsychotic/clip-interrogator-ext'\n",
+        "extFileSize=0\n",
+        "\n",
+        "install(extURL,extFileSize)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3bf2e0e0-8840-414d-8015-3124f1a09fae",
+      "metadata": {},
+      "source": [
+        "# \u5b89\u88c5Additonal-Networks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c87977e7-3c6f-444f-bd98-5f85d581e37f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from func.extensionsInstaller import install\n",
+        "\n",
+        "extURL='https://github.com/kohya-ss/sd-webui-additional-networks'\n",
+        "extFileSize=0\n",
+        "\n",
+        "install(extURL,extFileSize)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "b003ac5a-1557-4170-ad40-7a64b1c6db9c",
       "metadata": {},
       "source": [
@@ -1026,6 +1095,54 @@
         "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
         "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',True)\n",
         "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a0fb378c-3277-411c-905d-218d367bfc5e",
+      "metadata": {},
+      "source": [
+        "# \u6302\u8f7dBLIP\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "24d22674-3d3b-4aa3-b11b-befd89d82779",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "torch_hub_checkpoints_dir = os.path.abspath(os.path.join(root_dir,'.torch/hub/checkpoints/'))\n",
+        "print(torch_hub_checkpoints_dir)\n",
+        "# \u8be5\u6a21\u578b\u7684\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttps://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\n",
+        "check_model_and_make_symbollink('model_large_caption.pth',torch_hub_checkpoints_dir,True)\n",
+        "\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_artists.safetensors','./models/clip-interrogator',True)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_flavors.safetensors','./models/clip-interrogator',True)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_mediums.safetensors','./models/clip-interrogator',True)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_movements.safetensors','./models/clip-interrogator',True)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_negative.safetensors','./models/clip-interrogator',True)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_trendings.safetensors','./models/clip-interrogator',True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9be29da6-2d6f-423e-a063-d624dac723f7",
+      "metadata": {},
+      "source": [
+        "# \u6302\u8f7d body pose \u6a21\u578b\u7ed9 Openpose Editor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ff2b3f7d-511a-4f1f-87fa-51e4f468bffb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "check_model_and_make_symbollink('body_pose_model.pth','./models',True)"
       ]
     },
     {
@@ -1636,6 +1753,7 @@
         "    config['extra_networks_default_view'] = \"thumbs\"\n",
         "    config['upscaler_for_img2img'] = \"R-ESRGAN 4x+\"\n",
         "    config['extra_networks_default_multiplier'] = 0.6\n",
+        "    config['control_net_max_models_num'] = 4\n",
         "    return config\n",
         "\n",
         "modify_config(modify, backup_folder=\"config_backups\")"
