mount Additional_Networks_Lora

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1182,15 +1182,20 @@
         "                return\n",
         "        print('\u672a\u627e\u5230\u7f29\u7565\u56fe')\n",
         "\n",
-        "create_model_with_thumbnail('Akira Toriyama.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('Makima.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('animeScreencapStyle_v230epochs.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('kamehameha.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('lisaLoraCollectionOf_singleLoraLisa.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('princess zelda.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('wlop.safetensors','./models/Lora',True)\n",
-        "create_model_with_thumbnail('yakumo_yukari.pt','./models/Lora',True)"
+        "        \n",
+        "SD_orig_Lora_dir = './models/Lora'\n",
+        "Additional_Networks_Lora_dir = './extensions/sd-webui-additional-networks/models/lora'\n",
+        "\n",
+        "for i in [SD_orig_Lora_dir,Additional_Networks_Lora_dir]:\n",
+        "    create_model_with_thumbnail('Akira Toriyama.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('Makima.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('animeScreencapStyle_v230epochs.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('kamehameha.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('lisaLoraCollectionOf_singleLoraLisa.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('princess zelda.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('wlop.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('yakumo_yukari.pt',i,True)"
       ]
     },
     {
