--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1754,11 +1754,18 @@
         "\n",
         "# \u4f7f\u7528\u793a\u4f8b\uff0c\u4fee\u6539 quicksettings \u7684\u503c\n",
         "def modify(config):\n",
+        "    # \u9876\u90e8\u5feb\u6377\u65b9\u5f0f\u5448\u73b0\uff1a\u6a21\u578b\u9009\u62e9\u3001VAE\u9009\u62e9\u3001\u5185\u7ed8\u906e\u7f69\u6743\u91cd\u3001Clip Skip\u7cfb\u6570\u8c03\u8282\n",
         "    config['quicksettings'] = \"sd_model_checkpoint, sd_vae, inpainting_mask_weight, CLIP_stop_at_last_layers\"\n",
-        "    config['extra_networks_default_view'] = \"thumbs\"\n",
+        "    # \u56fe\u751f\u56fe\u7684\u8d85\u5206\u8fa8\u7387\u7b97\u6cd5\n",
         "    config['upscaler_for_img2img'] = \"R-ESRGAN 4x+\"\n",
+        "    # Extra Networks\u7684\u9ed8\u8ba4\u89c6\u56fe\n",
+        "    config['extra_networks_default_view'] = \"thumbs\"\n",
+        "    # Extra Networks\u7684\u9ed8\u8ba4\u7cfb\u6570\n",
         "    config['extra_networks_default_multiplier'] = 0.6\n",
+        "    # ControlNet\u591a\u5f00\u7684\u6570\u91cf\n",
         "    config['control_net_max_models_num'] = 4\n",
+        "    # CLIP skip \u7cfb\u6570 2\n",
+        "    config['CLIP_stop_at_last_layers'] = 2\n",
         "    return config\n",
         "\n",
         "modify_config(modify, backup_folder=\"config_backups\")"
