--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1195,7 +1195,10 @@
         "    create_model_with_thumbnail('princess zelda.safetensors',i,True)\n",
         "    create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors',i,True)\n",
         "    create_model_with_thumbnail('wlop.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('yakumo_yukari.pt',i,True)"
+        "    create_model_with_thumbnail('yakumo_yukari.pt',i,True)\n",
+        "    create_model_with_thumbnail('atomicHeartTwins_v1.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('atomictwinnies_v10.safetensors',i,True)\n",
+        "    create_model_with_thumbnail('bliznyashkiTheTwins_v1.safetensors',i,True)"
       ]
     },
     {
