add extension sd_save_intermediate_images

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -823,6 +823,29 @@
     },
     {
       "cell_type": "markdown",
+      "id": "a2ec5158-425d-4808-8ba7-04acea4e57a3",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5sd_save_intermediate_images\u63d2\u4ef6(\u4fdd\u5b58\u9884\u6d4b\u8fc7\u7a0b\u7684\u4e2d\u95f4\u56fe\u50cf)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "29ed9387-a3ab-4bf6-9d8b-097c1dc24c84",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from func.extensionsInstaller import install\n",
+        "\n",
+        "extURL='https://github.com/AlUlkesh/sd_save_intermediate_images'\n",
+        "extFileSize=0\n",
+        "\n",
+        "install(extURL,extFileSize)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "0e820cb6-9569-4f10-8cbc-0842b62f4247",
       "metadata": {},
       "source": [
@@ -1769,6 +1792,12 @@
         "    config['control_net_max_models_num'] = 4\n",
         "    # CLIP skip \u7cfb\u6570 2\n",
         "    config['CLIP_stop_at_last_layers'] = 2\n",
+        "    # \u542f\u52a8\u7f51\u9875\u65f6\u5bf9\u56fe\u5e93\u6d4f\u89c8\u5668\u8fdb\u884c\u9884\u52a0\u8f7d\n",
+        "    config['image_browser_preload'] = True\n",
+        "    # \u8bbe\u7f6e\u8bed\u8a00\u4e3a\u4e2d\u6587\n",
+        "    config['localization'] = 'zh_CN'\n",
+        "    # \u8bbe\u7f6e\u9884\u89c8\u6b65\u6570\uff0c\u9ed8\u8ba4\u4e3a10\n",
+        "    config['show_progress_every_n_steps'] = 10\n",
         "    return config\n",
         "\n",
         "modify_config(modify, backup_folder=\"config_backups\")"
