--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1116,16 +1116,15 @@
         "\n",
         "def find_file(root_dir, target_name):\n",
         "    paths = []\n",
-        "    for dirpath, dirnames, filenames in os.walk(root_dir):\n",
-        "        for filename in filenames:\n",
-        "            if filename == target_name:\n",
-        "                path = os.path.join(dirpath, filename)\n",
-        "                paths.append(path)\n",
+        "    for dirpath, dirnames, filenames in os.walk(root_dir, topdown=True):\n",
+        "        if target_name in filenames:\n",
+        "            path = os.path.join(dirpath, target_name)\n",
+        "            paths.append(path)\n",
+        "        if len(dirpath.split(os.sep)) - len(root_dir.split(os.sep)) >= 2:\n",
+        "            # \u5982\u679c\u76ee\u5f55\u6df1\u5ea6\u8d85\u8fc73\u5c42\uff0c\u5219\u4e0d\u8fdb\u5165\u5b50\u76ee\u5f55\uff0c\u8df3\u8fc7\u8fd9\u4e00\u5c42\n",
+        "            del dirnames[:]\n",
         "    paths.sort(key=len)\n",
-        "    if paths:\n",
-        "        return paths\n",
-        "    else:\n",
-        "        return None\n",
+        "    return paths if paths else None\n",
         "\n",
         "def check_file(file_path, size):\n",
         "    return os.path.exists(file_path) and os.path.getsize(file_path) == size\n",
@@ -1138,7 +1137,7 @@
         "            webUIDir = getWebUIDir()\n",
         "    except:\n",
         "        webUIDir = getWebUIDir()\n",
-        "    print(webUIDir)\n",
+        "    # print(webUIDir)\n",
         "        \n",
         "    if os.path.isabs(models_dir):  # \u5224\u65admodels_dir\u662f\u5426\u4e3a\u7edd\u5bf9\u8def\u5f84\n",
         "        abs_models_dir = models_dir\n",
@@ -1488,7 +1487,8 @@
         "    \n",
         "sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
         "print(sd_models_dir)\n",
-        "!cd $sd_models_dir &&\\\n",
+        "!$proxy &&\\\n",
+        "cd $sd_models_dir &&\\\n",
         "wget -O v2-1_768-nonema-pruned.yaml https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml"
       ]
     },
@@ -1538,53 +1538,61 @@
         "             dirpaths.append(dirpath)    \n",
         "    return dirpaths\n",
         "        \n",
-        "structure = {\n",
-        "    \"BLIP\": {\n",
-        "        \"data\": {},\n",
-        "        \"models\": {}\n",
-        "    },\n",
-        "    \"CodeFormer\": {\n",
+        "def copy_repos_for_sd_webui():\n",
+        "    structure = {\n",
+        "        \"BLIP\": {\n",
+        "            \"data\": {},\n",
+        "            \"models\": {}\n",
+        "        },\n",
+        "        \"CodeFormer\": {\n",
         "\n",
-        "    },\n",
-        "    \"k-diffusion\": {},\n",
-        "    \"stable-diffusion-stability-ai\": {},\n",
-        "    \"taming-transformers\": {}\n",
-        "}\n",
+        "        },\n",
+        "        \"k-diffusion\": {},\n",
+        "        \"stable-diffusion-stability-ai\": {},\n",
+        "        \"taming-transformers\": {}\n",
+        "    }\n",
         "\n",
-        "dir_list = search_dir_structure(\"/\", structure)\n",
+        "    dir_list = search_dir_structure(\"/\", structure)\n",
         "\n",
-        "input_repos_dir = None\n",
+        "    input_repos_dir = None\n",
         "\n",
-        "for i in dir_list:\n",
-        "    if 'input' in i:\n",
-        "        input_repos_dir = i\n",
-        "        break\n",
-        "\n",
-        "repos_dir = os.path.realpath(os.path.join(webUIDir,'./repositories'))\n",
-        "\n",
-        "print(input_repos_dir)\n",
-        "print(os.path.dirname(repos_dir))\n",
-        "repos_in_sd_list = search_dir_structure(os.path.dirname(repos_dir), structure)\n",
-        "\n",
-        "repos_in_sd_dir_toTest = None\n",
-        "if len(repos_in_sd_list)>0:\n",
         "    for i in dir_list:\n",
-        "        if 'stable-diffusion-webui' in i:\n",
-        "            repos_in_sd_dir_toTest = i\n",
+        "        if 'input' in i:\n",
+        "            input_repos_dir = i\n",
         "            break\n",
-        "            \n",
-        "if input_repos_dir:\n",
-        "    if os.path.exists(repos_dir) and search_dir_structure(os.path.dirname(repos_dir), structure):\n",
-        "        print(f\"{repos_dir} \u5df2\u7ecf\u5b58\u5728\u5e76\u62e5\u6709\u6b63\u786e\u7684Repos\")\n",
+        "\n",
+        "    repos_dir = os.path.realpath(os.path.join(webUIDir,'./repositories'))\n",
+        "\n",
+        "    print(input_repos_dir)\n",
+        "    print(os.path.dirname(repos_dir))\n",
+        "    repos_in_sd_list = search_dir_structure(os.path.dirname(repos_dir), structure)\n",
+        "\n",
+        "    repos_in_sd_dir_toTest = None\n",
+        "    if len(repos_in_sd_list)>0:\n",
+        "        for i in dir_list:\n",
+        "            if 'stable-diffusion-webui' in i:\n",
+        "                repos_in_sd_dir_toTest = i\n",
+        "                break\n",
+        "\n",
+        "    if input_repos_dir:\n",
+        "        if os.path.exists(repos_dir) and search_dir_structure(os.path.dirname(repos_dir), structure):\n",
+        "            print(f\"{repos_dir} \u5df2\u7ecf\u5b58\u5728\u5e76\u62e5\u6709\u6b63\u786e\u7684Repos\")\n",
+        "        else:\n",
+        "            if not os.path.exists(repos_dir):\n",
+        "                !mkdir $repos_dir\n",
+        "            # !cp -r $input_repos_dir/* $repos_dir\n",
+        "            if os.path.exists(repos_dir):\n",
+        "                !rm -rf $repos_dir\n",
+        "            !ln -s $input_repos_dir $repos_dir\n",
         "    else:\n",
-        "        if not os.path.exists(repos_dir):\n",
-        "            !mkdir $repos_dir\n",
-        "        # !cp -r $input_repos_dir/* $repos_dir\n",
-        "        if os.path.exists(repos_dir):\n",
-        "            !rm -rf $repos_dir\n",
-        "        !ln -s $input_repos_dir $repos_dir\n",
-        "else:\n",
-        "    print('\u627e\u4e0d\u5230\u5bf9\u5e94\u7684\u6570\u636e\u96c6')"
+        "        print('\u627e\u4e0d\u5230\u5bf9\u5e94\u7684\u6570\u636e\u96c6')\n",
+        "        \n",
+        "        \n",
+        "if env_name == 'AutoDL':\n",
+        "    print('AutoDL\u73af\u5883\u65e0\u9700\u8fd0\u884c\u8fd9\u4e2acell')\n",
+        "    pass\n",
+        "elif env_name == 'OpenBayes':\n",
+        "    copy_repos_for_sd_webui()"
       ]
     },
     {
