--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1082,7 +1082,7 @@
       "id": "38b87ebd-8eaa-4a22-98a9-767c5b668224",
       "metadata": {},
       "source": [
-        "## \u6302\u8f7d.ckpt\u6216.safetensors\u5230SD WebUI\u6a21\u578b\u6587\u4ef6\u5939"
+        "## \u5b9a\u4e49\u6a21\u578b\u6302\u8f7d\u51fd\u6570"
       ]
     },
     {
@@ -1206,15 +1206,52 @@
         "        return os.path.dirname(target_model_dist)\n",
         "    else:\n",
         "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
-        "        return None\n",
-        "\n",
+        "        return None\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c9e9799f-4027-47d7-b996-673949a49843",
+      "metadata": {},
+      "source": [
+        "## \u4ea4\u4ee3\u4e0d\u540c\u73af\u5883\u7684\u6302\u8f7d\u65b9\u5f0f"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "02c370fd-219c-4ee5-a3ee-eb021677324c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "if env_name == 'AutoDL':\n",
+        "    copy_or_mount = True\n",
+        "elif env_name == 'OpenBayes':\n",
+        "    copy_or_mount = False"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f09df0f7-9cf8-4bff-b6e6-43c96ac00640",
+      "metadata": {},
+      "source": [
+        "## \u6302\u8f7d.ckpt\u6216.safetensors\u5230SD WebUI\u6a21\u578b\u6587\u4ef6\u5939"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b2a517b5-d1b5-4e34-aa85-a516fa2d04a5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# SD 2.1\u6a21\u578b\n",
-        "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt','./models/Stable-diffusion',True)\n",
+        "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt','./models/Stable-diffusion',copy_or_mount)\n",
         "# ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
-        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',True) \n",
+        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',copy_or_mount) \n",
         "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
-        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',True)\n",
-        "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',True)"
+        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
+        "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',copy_or_mount)"
       ]
     },
     {
@@ -1237,14 +1274,14 @@
         "torch_hub_checkpoints_dir = os.path.abspath(os.path.join(root_dir,'.torch/hub/checkpoints/'))\n",
         "print(torch_hub_checkpoints_dir)\n",
         "# \u8be5\u6a21\u578b\u7684\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttps://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\n",
-        "check_model_and_make_symbollink('model_large_caption.pth',torch_hub_checkpoints_dir,True)\n",
+        "check_model_and_make_symbollink('model_large_caption.pth',torch_hub_checkpoints_dir,copy_or_mount)\n",
         "\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_artists.safetensors','./models/clip-interrogator',True)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_flavors.safetensors','./models/clip-interrogator',True)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_mediums.safetensors','./models/clip-interrogator',True)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_movements.safetensors','./models/clip-interrogator',True)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_negative.safetensors','./models/clip-interrogator',True)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_trendings.safetensors','./models/clip-interrogator',True)"
+        "check_model_and_make_symbollink('ViT-L-14_openai_artists.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_flavors.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_mediums.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_movements.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_negative.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ViT-L-14_openai_trendings.safetensors','./models/clip-interrogator',copy_or_mount)"
       ]
     },
     {
@@ -1262,7 +1299,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "check_model_and_make_symbollink('body_pose_model.pth','./models',True)"
+        "check_model_and_make_symbollink('body_pose_model.pth','./models',copy_or_mount)"
       ]
     },
     {
@@ -1307,18 +1344,18 @@
         "Additional_Networks_Lora_dir = './extensions/sd-webui-additional-networks/models/lora'\n",
         "\n",
         "for i in [SD_orig_Lora_dir,Additional_Networks_Lora_dir]:\n",
-        "    create_model_with_thumbnail('Akira Toriyama.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('Makima.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('animeScreencapStyle_v230epochs.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('kamehameha.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('lisaLoraCollectionOf_singleLoraLisa.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('princess zelda.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('wlop.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('yakumo_yukari.pt',i,True)\n",
-        "    create_model_with_thumbnail('atomicHeartTwins_v1.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('atomictwinnies_v10.safetensors',i,True)\n",
-        "    create_model_with_thumbnail('bliznyashkiTheTwins_v1.safetensors',i,True)"
+        "    create_model_with_thumbnail('Akira Toriyama.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('Makima.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('animeScreencapStyle_v230epochs.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('kamehameha.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('lisaLoraCollectionOf_singleLoraLisa.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('princess zelda.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('wlop.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('yakumo_yukari.pt',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('atomicHeartTwins_v1.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('atomictwinnies_v10.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('bliznyashkiTheTwins_v1.safetensors',i,copy_or_mount)"
       ]
     },
     {
@@ -1345,11 +1382,11 @@
       "outputs": [],
       "source": [
         "# BLIP\n",
-        "check_model_and_make_symbollink('model_base_caption_capfilt_large.pth','./models/BLIP',True)\n",
-        "check_model_and_make_symbollink('ViT-L-14.pt','/root/.cache/clip',True)\n",
-        "check_model_and_make_symbollink('ViT-B-16.pt','/root/.cache/clip',True)\n",
+        "check_model_and_make_symbollink('model_base_caption_capfilt_large.pth','./models/BLIP',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ViT-L-14.pt','/root/.cache/clip',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ViT-B-16.pt','/root/.cache/clip',copy_or_mount)\n",
         "# Deepbooru\u6a21\u578b\n",
-        "check_model_and_make_symbollink('model-resnet_custom_v3.pt','./models/torch_deepdanbooru',True)"
+        "check_model_and_make_symbollink('model-resnet_custom_v3.pt','./models/torch_deepdanbooru',copy_or_mount)"
       ]
     },
     {
@@ -1368,11 +1405,11 @@
       "outputs": [],
       "source": [
         "# GFPGAN\n",
-        "check_model_and_make_symbollink('GFPGANv1.4.pth','./models/GFPGAN',True)\n",
-        "check_model_and_make_symbollink('detection_Resnet50_Final.pth','./models/GFPGAN',True)\n",
-        "check_model_and_make_symbollink('parsing_parsenet.pth','./models/GFPGAN',True)\n",
+        "check_model_and_make_symbollink('GFPGANv1.4.pth','./models/GFPGAN',copy_or_mount)\n",
+        "check_model_and_make_symbollink('detection_Resnet50_Final.pth','./models/GFPGAN',copy_or_mount)\n",
+        "check_model_and_make_symbollink('parsing_parsenet.pth','./models/GFPGAN',copy_or_mount)\n",
         "# Codeformer\n",
-        "check_model_and_make_symbollink('codeformer-v0.1.0.pth','./models/Codeformer',True)"
+        "check_model_and_make_symbollink('codeformer-v0.1.0.pth','./models/Codeformer',copy_or_mount)"
       ]
     },
     {
@@ -1390,11 +1427,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "check_model_and_make_symbollink('SwinIR_4x.pth','./models/SwinIR',True)\n",
-        "check_model_and_make_symbollink('RealESRGAN_x4plus.pth','./models/RealESRGAN',True)\n",
-        "check_model_and_make_symbollink('BSRGAN.pth','./models/ESRGAN',True)\n",
-        "check_model_and_make_symbollink('4x_foolhardy_Remacri.pth','./models/ESRGAN',True)\n",
-        "check_model_and_make_symbollink('ESRGAN_4x.pth','./models/ESRGAN',True)"
+        "check_model_and_make_symbollink('SwinIR_4x.pth','./models/SwinIR',copy_or_mount)\n",
+        "check_model_and_make_symbollink('RealESRGAN_x4plus.pth','./models/RealESRGAN',copy_or_mount)\n",
+        "check_model_and_make_symbollink('BSRGAN.pth','./models/ESRGAN',copy_or_mount)\n",
+        "check_model_and_make_symbollink('4x_foolhardy_Remacri.pth','./models/ESRGAN',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ESRGAN_4x.pth','./models/ESRGAN',copy_or_mount)"
       ]
     },
     {
@@ -1422,18 +1459,18 @@
       "outputs": [],
       "source": [
         "# midas\u6a21\u578b\n",
-        "check_model_and_make_symbollink('dpt_hybrid-midas-501f0c75.pt','./extensions/sd-webui-controlnet/annotator/midas',True)\n",
+        "check_model_and_make_symbollink('dpt_hybrid-midas-501f0c75.pt','./extensions/sd-webui-controlnet/annotator/midas',copy_or_mount)\n",
         "# res101.pth\u6a21\u578b\n",
-        "check_model_and_make_symbollink('res101.pth','./extensions/sd-webui-controlnet/annotator/leres',True)\n",
+        "check_model_and_make_symbollink('res101.pth','./extensions/sd-webui-controlnet/annotator/leres',copy_or_mount)\n",
         "# hed\u6a21\u578b\n",
-        "check_model_and_make_symbollink('network-bsds500.pth','./extensions/sd-webui-controlnet/annotator/hed',True)\n",
+        "check_model_and_make_symbollink('network-bsds500.pth','./extensions/sd-webui-controlnet/annotator/hed',copy_or_mount)\n",
         "# mlsd\u6a21\u578b\n",
-        "check_model_and_make_symbollink('mlsd_large_512_fp32.pth','./extensions/sd-webui-controlnet/annotator/mlsd',True)\n",
+        "check_model_and_make_symbollink('mlsd_large_512_fp32.pth','./extensions/sd-webui-controlnet/annotator/mlsd',copy_or_mount)\n",
         "# hand_pose_model\u548cbody_pose_model\u6a21\u578b\n",
-        "check_model_and_make_symbollink('body_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',True)\n",
-        "check_model_and_make_symbollink('hand_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',True)\n",
+        "check_model_and_make_symbollink('body_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',copy_or_mount)\n",
+        "check_model_and_make_symbollink('hand_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',copy_or_mount)\n",
         "# Segmentation\u7684preprocessor\u6a21\u578b\n",
-        "check_model_and_make_symbollink('upernet_global_small.pth','./extensions/sd-webui-controlnet/annotator/uniformer',True)"
+        "check_model_and_make_symbollink('upernet_global_small.pth','./extensions/sd-webui-controlnet/annotator/uniformer',copy_or_mount)"
       ]
     },
     {
@@ -1451,14 +1488,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "check_model_and_make_symbollink('control_canny-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
-        "check_model_and_make_symbollink('control_depth-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
-        "check_model_and_make_symbollink('control_hed-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
-        "check_model_and_make_symbollink('control_mlsd-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
-        "check_model_and_make_symbollink('control_normal-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
-        "check_model_and_make_symbollink('control_openpose-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
-        "check_model_and_make_symbollink('control_scribble-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
-        "check_model_and_make_symbollink('control_seg-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)"
+        "check_model_and_make_symbollink('control_canny-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
+        "check_model_and_make_symbollink('control_depth-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
+        "check_model_and_make_symbollink('control_hed-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
+        "check_model_and_make_symbollink('control_mlsd-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
+        "check_model_and_make_symbollink('control_normal-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
+        "check_model_and_make_symbollink('control_openpose-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
+        "check_model_and_make_symbollink('control_scribble-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
+        "check_model_and_make_symbollink('control_seg-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)"
       ]
     },
     {
