--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1074,7 +1074,7 @@
         "    os.remove(file_path)\n",
         "    os.remove(os.path.join(directory, 'testfile_read'))\n",
         "    \n",
-        "test_disk_speed('/root/autodl-fs', 100)  # \u6d4b\u8bd5 100 MB \u5927\u5c0f\u7684\u6587\u4ef6\u5e76\u5199\u5165\u5230\u6307\u5b9a\u8def\u5f84 "
+        "# test_disk_speed('/root/autodl-fs', 100)  # \u6d4b\u8bd5 100 MB \u5927\u5c0f\u7684\u6587\u4ef6\u5e76\u5199\u5165\u5230\u6307\u5b9a\u8def\u5f84 "
       ]
     },
     {
@@ -1635,9 +1635,7 @@
     {
       "cell_type": "markdown",
       "id": "21a173b5-8ee8-4c2f-9114-718c9022789b",
-      "metadata": {
-        "jp-MarkdownHeadingCollapsed": true
-      },
+      "metadata": {},
       "source": [
         "# \u751f\u6210Config.json"
       ]
@@ -1645,7 +1643,9 @@
     {
       "cell_type": "markdown",
       "id": "46ccaa61-cd93-446d-9693-da64c2ed9ea4",
-      "metadata": {},
+      "metadata": {
+        "jp-MarkdownHeadingCollapsed": true
+      },
       "source": [
         "## \u5b9a\u4e49\u8981\u5199\u5165\u7684JSON\u5bf9\u8c61\uff08\u592a\u957f\u4e86\uff0c\u5efa\u8bae\u6298\u53e0\uff09"
       ]
@@ -1874,6 +1874,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "0dc2cdf6-b66b-4c0f-8ebe-4300247d009e",
+      "metadata": {},
+      "source": [
+        "## \u5bf9SD-WebUI\u7684config.json\u8fdb\u884c\u53c2\u6570\u914d\u7f6e"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "fda22c2f-fd93-41f3-a138-2c7287b9b0d7",
@@ -1932,7 +1940,7 @@
         "    # Extra Networks\u7684\u9ed8\u8ba4\u7cfb\u6570\n",
         "    config['extra_networks_default_multiplier'] = 0.6\n",
         "    # ControlNet\u591a\u5f00\u7684\u6570\u91cf\n",
-        "    config['control_net_max_models_num'] = 4\n",
+        "    config['control_net_max_models_num'] = 8\n",
         "    # CLIP skip \u7cfb\u6570 2\n",
         "    config['CLIP_stop_at_last_layers'] = 2\n",
         "    # \u542f\u52a8\u7f51\u9875\u65f6\u5bf9\u56fe\u5e93\u6d4f\u89c8\u5668\u8fdb\u884c\u9884\u52a0\u8f7d\n",
@@ -1944,14 +1952,6 @@
         "    return config\n",
         "\n",
         "modify_config(modify, backup_folder=\"config_backups\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "0dc2cdf6-b66b-4c0f-8ebe-4300247d009e",
-      "metadata": {},
-      "source": [
-        "# \u5bf9SD-WebUI\u7684config.json\u8fdb\u884c\u53c2\u6570\u914d\u7f6e"
       ]
     },
     {
@@ -2075,7 +2075,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.15"
     },
     "toc-autonumbering": false,
     "toc-showmarkdowntxt": false,
