--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1225,9 +1225,9 @@
       "outputs": [],
       "source": [
         "if env_name == 'AutoDL':\n",
-        "    copy_or_mount = True\n",
+        "    copy_or_mount = False\n",
         "elif env_name == 'OpenBayes':\n",
-        "    copy_or_mount = False"
+        "    copy_or_mount = True"
       ]
     },
     {
