update LoRA models info

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1344,18 +1344,36 @@
         "Additional_Networks_Lora_dir = './extensions/sd-webui-additional-networks/models/lora'\n",
         "\n",
         "for i in [SD_orig_Lora_dir,Additional_Networks_Lora_dir]:\n",
+        "    # \u9e1f\u5c71\u660e\u98ce\u683c\n",
         "    create_model_with_thumbnail('Akira Toriyama.safetensors',i,copy_or_mount)\n",
+        "    # \u7535\u952f\u4eba \u739b\u5947\u739b\n",
         "    create_model_with_thumbnail('Makima.safetensors',i,copy_or_mount)\n",
+        "    # \u52a8\u753b\u7247\u8d28\u611f\n",
         "    create_model_with_thumbnail('animeScreencapStyle_v230epochs.safetensors',i,copy_or_mount)\n",
+        "    # \u9f9f\u6ce2\u6c14\u529f\n",
         "    create_model_with_thumbnail('kamehameha.safetensors',i,copy_or_mount)\n",
+        "    # \u539f\u795e \u4e3d\u838e \u6a21\u578b https://civitai.com/models/4664/lisa-lora-collection-of-trauters\n",
         "    create_model_with_thumbnail('lisaLoraCollectionOf_singleLoraLisa.safetensors',i,copy_or_mount)\n",
+        "    # \u585e\u5c14\u8fbe\u516c\u4e3b\u6a21\u578b\n",
         "    create_model_with_thumbnail('princess zelda.safetensors',i,copy_or_mount)\n",
+        "    # \u5f02\u5ea6\u4e4b\u5203\u6a21\u578b https://civitai.com/models/5179/pyra-mythra-pneuma-xenoblade-lora\n",
         "    create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors',i,copy_or_mount)\n",
+        "    # wlop\u753b\u98ce\u6a21\u578b https://civitai.com/models/5042/wlop-style-lora\n",
         "    create_model_with_thumbnail('wlop.safetensors',i,copy_or_mount)\n",
+        "    # \u516b\u4e91\u7d2b\u6a21\u578b https://civitai.com/models/5236/yakumo-yukari\n",
         "    create_model_with_thumbnail('yakumo_yukari.pt',i,copy_or_mount)\n",
+        "    # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
         "    create_model_with_thumbnail('atomicHeartTwins_v1.safetensors',i,copy_or_mount)\n",
+        "    # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
         "    create_model_with_thumbnail('atomictwinnies_v10.safetensors',i,copy_or_mount)\n",
-        "    create_model_with_thumbnail('bliznyashkiTheTwins_v1.safetensors',i,copy_or_mount)"
+        "    # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
+        "    create_model_with_thumbnail('bliznyashkiTheTwins_v1.safetensors',i,copy_or_mount)\n",
+        "    # Noise Offset\u6a21\u578b\uff0c\u4f7f\u56fe\u7247\u7684\u5149\u7167\u770b\u8d77\u6765\u66f4\u771f\u5b9e\uff1ahttps://civitai.com/models/13941/epinoiseoffset\n",
+        "    create_model_with_thumbnail('epiNoiseoffset_v2.safetensors',i,copy_or_mount)\n",
+        "    # \u58a8\u5fc3\u98ce\u683c https://civitai.com/models/12597/moxin\n",
+        "    create_model_with_thumbnail('Moxin_10.safetensors',i,copy_or_mount)\n",
+        "    # \u89d2\u8272\u591a\u89c6\u89d2\u56fe https://civitai.com/models/7252/charturnerbeta-lora-experimental\n",
+        "    create_model_with_thumbnail('charturnerbetaLora_charturnbetalora.safetensors',i,copy_or_mount)"
       ]
     },
     {
